Compiled .tex to .pdf.

--- a/report/lab2.tex
+++ b/report/lab2.tex
@@ -53,10 +53,10 @@
 \qquad Algorytm dzieli macierz na 4 podmacierze, następnie wykonuje na każdej macierzy odpowiednie operacje:
 \begin{equation}
 A = 
-     \begin{pmatrix}
+     \begin{bmatrix}
       A_{1,1} & A_{1,2}  \\
       A_{2,1} & A_{2,2} \\
-     \end{pmatrix}
+     \end{bmatrix}
 \end{equation}
 \begin{equation}
 A_{1,1}^{-1} = inverse(A_{1,1})
