--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -776,7 +776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.13 ('PSI')",
    "language": "python",
    "name": "python3"
   },
@@ -790,12 +790,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "2145f33af11579e336f5bc30a7b318197c0175e9e4a72ffaa6a02aa5294ef5b7"
    }
   }
  },
