--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -35,7 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def generate_matrix(ncols: int, nrows: int, propability=1) -> np.ndarray:\n",
     "    M = np.random.randint(1, 9, size=(nrows, ncols))\n",
     "    R = np.random.uniform(size=(nrows, ncols))\n",
@@ -56,10 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TreeBase():\n",
+    "class TreeBase:\n",
     "    def __init__(self) -> None:\n",
     "        self.size: Optional[Tuple[float, float, float, float]] = None\n",
     "        self.rank: int = 0\n",
+    "\n",
     "\n",
     "class TreeLeaf(TreeBase):\n",
     "    def __init__(self) -> None:\n",
@@ -72,10 +72,11 @@
     "class TreeSplit(TreeBase):\n",
     "    def __init__(self) -> None:\n",
     "        super().__init__()\n",
-    "        self.left_upper: TreeNode= None\n",
+    "        self.left_upper: TreeNode = None\n",
     "        self.right_upper: TreeNode = None\n",
     "        self.left_lower: TreeNode = None\n",
     "        self.right_lower: TreeNode = None\n",
+    "\n",
     "\n",
     "TreeNode = Union[TreeLeaf, TreeSplit]"
    ]
@@ -116,9 +117,12 @@
    "outputs": [],
    "source": [
     "def consist_of_zeros(A):\n",
-    "    return np.all(A==0)\n",
+    "    return np.all(A == 0)\n",
     "\n",
-    "def compress_matrix(A: np.ndarray, first_row: int, last_row: int, first_col: int, last_col: int, r: int) -> TreeLeaf:\n",
+    "\n",
+    "def compress_matrix(\n",
+    "    A: np.ndarray, first_row: int, last_row: int, first_col: int, last_col: int, r: int\n",
+    ") -> TreeLeaf:\n",
     "    v = TreeLeaf()\n",
     "    v.size = (first_row, last_row, first_col, last_col)\n",
     "    U, D, V = truncatedSVD(A, r + 1)\n",
@@ -126,11 +130,10 @@
     "        v.rank = 0\n",
     "    else:\n",
     "        v.rank = r\n",
-    "        v.singular_values = D[0 : r]\n",
-    "        v.U = U[:, 0 : r]\n",
-    "        v.V =  V[0 : r, :]\n",
-    "    return v\n",
-    "\n"
+    "        v.singular_values = D[0:r]\n",
+    "        v.U = U[:, 0:r]\n",
+    "        v.V = V[0:r, :]\n",
+    "    return v"
    ]
   },
   {
@@ -146,8 +149,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_tree(A: np.ndarray, first_row: int, last_row: int, first_col: int, last_col: int, r: int, eps: float) -> TreeNode:\n",
-    "    new_A = A[first_row : last_row, first_col : last_col]\n",
+    "def create_tree(\n",
+    "    A: np.ndarray,\n",
+    "    first_row: int,\n",
+    "    last_row: int,\n",
+    "    first_col: int,\n",
+    "    last_col: int,\n",
+    "    r: int,\n",
+    "    eps: float,\n",
+    ") -> TreeNode:\n",
+    "    new_A = A[first_row:last_row, first_col:last_col]\n",
     "    U, D, V = truncatedSVD(new_A, r + 1)\n",
     "    if r + 1 > D.shape[0] or D[r] < eps:\n",
     "        if D.shape[0] <= 2:\n",
@@ -158,10 +169,18 @@
     "        v = TreeSplit()\n",
     "        middle_row = (first_row + last_row) // 2\n",
     "        middle_col = (first_col + last_col) // 2\n",
-    "        v.left_upper = create_tree(A, first_row, middle_row, first_col, middle_col, r, eps)\n",
-    "        v.right_upper = create_tree(A, first_row, middle_row, middle_col, last_col, r, eps)\n",
-    "        v.left_lower = create_tree(A, middle_row, last_row, first_col, middle_col, r, eps)\n",
-    "        v.right_lower = create_tree(A, middle_row, last_row, middle_col, last_col, r, eps)\n",
+    "        v.left_upper = create_tree(\n",
+    "            A, first_row, middle_row, first_col, middle_col, r, eps\n",
+    "        )\n",
+    "        v.right_upper = create_tree(\n",
+    "            A, first_row, middle_row, middle_col, last_col, r, eps\n",
+    "        )\n",
+    "        v.left_lower = create_tree(\n",
+    "            A, middle_row, last_row, first_col, middle_col, r, eps\n",
+    "        )\n",
+    "        v.right_lower = create_tree(\n",
+    "            A, middle_row, last_row, middle_col, last_col, r, eps\n",
+    "        )\n",
     "    return v"
    ]
   },
@@ -185,16 +204,20 @@
     "            col_size = root.size[3] - root.size[2]\n",
     "            return np.zeros((row_size, col_size))\n",
     "        else:\n",
-    "            return root.U @ (root.singular_values * np.identity(len(root.singular_values))) @ root.V\n",
+    "            return (\n",
+    "                root.U\n",
+    "                @ (root.singular_values * np.identity(len(root.singular_values)))\n",
+    "                @ root.V\n",
+    "            )\n",
     "    else:\n",
     "        M11 = decompose_tree(root.left_upper)\n",
     "        M21 = decompose_tree(root.left_lower)\n",
     "        M12 = decompose_tree(root.right_upper)\n",
     "        M22 = decompose_tree(root.right_lower)\n",
     "        return np.concatenate(\n",
-    "        [np.concatenate([M11, M12], axis=1),\n",
-    "         np.concatenate([M21, M22], axis=1)],\n",
-    "        axis=0,)\n"
+    "            [np.concatenate([M11, M12], axis=1), np.concatenate([M21, M22], axis=1)],\n",
+    "            axis=0,\n",
+    "        )"
    ]
   },
   {
@@ -220,20 +243,20 @@
     "            M = np.zeros((row_size, col_size))\n",
     "            for i in range(root.rank):\n",
     "                for row in range(row_size):\n",
-    "                    M[row, i] = 1 \n",
+    "                    M[row, i] = 1\n",
     "                for col in range(col_size):\n",
     "                    M[i, col] = 1\n",
     "            return M\n",
-    "                \n",
+    "\n",
     "    else:\n",
     "        M11 = tree_to_draw_matrix(root.left_upper)\n",
     "        M21 = tree_to_draw_matrix(root.left_lower)\n",
     "        M12 = tree_to_draw_matrix(root.right_upper)\n",
     "        M22 = tree_to_draw_matrix(root.right_lower)\n",
     "        return np.concatenate(\n",
-    "        [np.concatenate([M11, M12], axis=1),\n",
-    "         np.concatenate([M21, M22], axis=1)],\n",
-    "        axis=0,)"
+    "            [np.concatenate([M11, M12], axis=1), np.concatenate([M21, M22], axis=1)],\n",
+    "            axis=0,\n",
+    "        )"
    ]
   },
   {
@@ -257,7 +280,7 @@
     "    where_1 = np.where(M == 1)\n",
     "    M[where_0] = 1\n",
     "    M[where_1] = 0\n",
-    "    plt.imshow(M, cmap='gray')"
+    "    plt.imshow(M, cmap=\"gray\")"
    ]
   },
   {
@@ -280,11 +303,10 @@
     "    y_function = list(map(f, x_function))\n",
     "    fig = plt.figure()\n",
     "    fig.set_size_inches(7, 7)\n",
-    "    plt.plot(x_function, y_function, 'r-')\n",
-    "    plt.plot(x, y, 'b-')\n",
-    "    plt.xlabel('Rozmiar macierzy')\n",
-    "    plt.ylabel('Czas tworzenia drzewa')\n",
-    "    "
+    "    plt.plot(x_function, y_function, \"r-\")\n",
+    "    plt.plot(x, y, \"b-\")\n",
+    "    plt.xlabel(\"Rozmiar macierzy\")\n",
+    "    plt.ylabel(\"Czas tworzenia drzewa\")"
    ]
   },
   {
@@ -301,7 +323,7 @@
    "outputs": [],
    "source": [
     "def mse(A, B):\n",
-    "    return np.sum(np.square(A - B))\n"
+    "    return np.sum(np.square(A - B))"
    ]
   },
   {
@@ -318,10 +340,13 @@
    "outputs": [],
    "source": [
     "A = generate_matrix(64, 64, 0.5)\n",
+    "\n",
+    "\n",
     "def compress(A, r, eps) -> TreeNode:\n",
     "    return create_tree(A, 0, A.shape[0], 0, A.shape[1], r, eps)\n",
-    "    \n",
-    "node = compress(A, 1, 0.1)\n"
+    "\n",
+    "\n",
+    "node = compress(A, 1, 0.1)"
    ]
   },
   {
@@ -372,7 +397,7 @@
     }
    ],
    "source": [
-    "draw_tree(node)\n"
+    "draw_tree(node)"
    ]
   },
   {
@@ -418,7 +443,7 @@
     }
    ],
    "source": [
-    "f = lambda x: 0.4 * 10**(-7) * x**1 + 0.7\n",
+    "f = lambda x: 0.4 * 10 ** (-7) * x**1 + 0.7\n",
     "# f = lambda x: 0.66\n",
     "compare_to_function(powers, times, f)"
    ]
